# Portfolio-management

./: .cursorignore  .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Makefile  README-TESTING.md  README.md  SESSION_DEBUG_GUIDE.md  c  dasd  db.sqlite3 (backup)  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.cursor/rules/: portfolio-management-rule.mdc
.github/workflows/: ci.yml  performance-benchmarks.yml  pr-checks.yml
.memory-bank/: Rules for AI Coding Agent.md  index.md
.memory-bank/Product Overview/: Portfolio NAV.md  features.md  user_stories.md
.memory-bank/Steerings/: Calculation Conventions.md  dev_conventions.md  testing_conventions.md
.memory-bank/Tasks/: backend-test-framework-design.md  backlog.md  complexity-refactoring-task.md  comprehensive-test-plan.md  roadmap.md
.memory-bank/Tech Details/: NAV Function and FX Flow.md  architecture.md  backend.md  bond-amortization-domain.md  complexity-management.md  decimal-precision-standards.md  development-environment-setup.md  effective-date-architecture.md  external-api-patterns.md  frontend.md  infra.md  timezone-naive-datetime-approach.md  transaction-processing-patterns.md
Data/: Buy-in calcs.xlsx  Charles Stanley test import.xlsx  FX data from Galaxy.csv  FX data from Galaxy.xlsx  FX effect elaborations.xlsx  JISA -- cash.xlsx  JISA -- transactions.xlsx  JISA_LL_4682719_Generated_1308_04Aug.xlsx  JISA_TL_4682719_Generated_1308_04Aug.xlsx  Pricing data from Galaxy.csv  Statement_ISA_4681921_Generated_1624_31Oct.xlsx  Statement_ISA_4681921_Generated_1711_31Oct.xlsx  Statement_ISA_4681921_Generated_1716_31Oct.xlsx  Statement_ISA_4681921_Generated_1725_31Oct.xlsx  Statement_ISA_4681921_Generated_2158_08Aug.xlsx  Statement_Investment_4432757_Generated_1744_31Oct.xlsx  Statement_Investment_4432757_Generated_1851_31Oct.xlsx  Statement_JISA_4682719_Generated_1316_04Aug.xlsx  Statement_JISA_4682719_Generated_1318_04Aug.xlsx  Statement_JISA_4682719_Generated_1619_31Oct.xlsx  Statement_JISA_4682720_Generated_1613_31Oct.xlsx  Statement_JISA_4682720_Generated_2133_07Aug (1).xlsx  Statement_JISA_4682720_Generated_2133_07Aug.xlsx  Statement_SIPP_4455068_Generated_2119_31Oct.xlsx  Sterling -- Cash.xlsx  Sterling -- transactions.xlsx  Test -- Cash.xlsx  Test -- Transactions.xlsx  Test RU.xlsx  Transact ISA -- cash.xlsx  Transact ISA -- transactions.xlsx  Transact SIPP -- cash.xlsx  Transact SIPP -- transactions.xlsx  UBSE -- transactions.xlsx  UBSP -- cash.xlsx  UBSP -- pricing.xlsx  UBSP -- transactions.xlsx  UBS_price_data.csv  db---try.sqlite3  db-AW-0801.sqlite3  (+2 more)
backend/: .coverage  .pre-commit-config.yaml  FINAL_OPTIMIZATION_RESULTS.md  Makefile  TEST_OPTIMIZATION.md  constants.py  db_transfer.py  flake8_report.txt  notebook_setup.py  pyproject.toml  pytest.ini  pytest_dev.ini  pytest_fast.ini  pytest_unit.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_precommit.ps1  run_uvicorn.py  setup.cfg  test.ipynb
backend/closed_positions/: __init__.py  apps.py  urls.py  views.py
backend/common/: __init__.py  apps.py  fields.py  forms.py  models.py  test.py  views.py
backend/core/: __init__.py  accounts_utils.py  balance_tracker.py  broker_api_utils.py  brokers_utils.py  chart_utils.py  database_utils.py  date_utils.py  formatting_utils.py  import_utils.py  micex_aci_utils.py  pagination_utils.py  portfolio_utils.py  positions_utils.py  price_utils.py  securities_utils.py  sorting_utils.py  summary_utils.py  tables_utils.py  tinkoff_utils.py  transactions_utils.py  user_utils.py
backend/dashboard/: __init__.py  admin.py  apps.py  urls.py  views.py
backend/database/: __init__.py  admin.py  apps.py  consumers.py  forms.py  serializers.py  urls.py  views.py
backend/docs/: BOND_FEATURES_README.md  TRANSACTION_UNIFICATION_SUMMARY.md
backend/open_positions/: __init__.py  apps.py  urls.py  views.py
backend/portfolio_management/: asgi.py  auth_middleware.py  jwt_middleware.py  middleware.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/scripts/: format_and_lint.py  setup_linting.py
backend/summary_analysis/: __init__.py  apps.py  urls.py  views.py
backend/tests/: __init__.py  conftest.py  conftest_fixed.py  conftest_simple.py  simple_db_test.py  simple_test.py  test_api_endpoints.py  test_assets_model.py  test_bond_aci.py  test_broker_api_utils.py  test_charles_stanley_import.py  test_cors_session.py  test_jwt_session_behavior.py  test_save_update_broker_performance.py  test_session_integration.py  test_tinkoff_utils.py  test_transaction_unification.py  test_utils.py  test_ytm_calculation.py
backend/transactions/: __init__.py  admin.py  apps.py  consumers.py  serializers.py  urls.py  views.py
backend/users/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
portfolio-frontend/: .env.example  .eslintrc.js  AUTH_DEBUG_GUIDE.md  jest.config.js  package-lock.json  package.json  vue.config.js
portfolio-frontend/public/: index.html
portfolio-frontend/scripts/: replace-console-logs.js
portfolio-frontend/src/: App.vue  main.js  mockData.js
portfolio_management/: .coverage  .pre-commit-config.yaml  constants.py  db.sqlite3  db.sqlite3 (backup)  db_transfer.py  excel_parse.ipynb  manage.py  micex_api_analysis.ipynb  notebook_setup.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.txt  run_daphne.py  run_uvicorn.py  setup.cfg  temp_4dad5170-4d3d-4ab5-97a5-bd3818cb3780_Charles Stanley test import.xlsx  test.ipynb  test.py  test_utils.py  utils.py
portfolio_management/closed_positions/: apps.py  urls.py  views.py
portfolio_management/common/: forms.py  models.py  test.py  views.py
portfolio_management/core/: accounts_utils.py  asset_utils.py  balance_tracker.py  broker_api_utils.py  brokers_utils.py  chart_utils.py  dashboard_utils.py  database_utils.py  (+15 more)
scripts/: check_performance_regressions.py  complexity_analysis.py  format_and_lint.py  generate_performance_report.py  profile_memory_usage.py  refactoring_example.py
(+473 files in other folders)
